--- a/style.css
+++ b/style.css
@@ -65,30 +65,47 @@ img {
 /* ---Your code starts here--- */
 
 nav {
+  position: fixed;
+  z-index: 2;
   /* všimni si, že při scrollování obsahem stránky navigace zůstává na vrchu viewportu  */
 }
 
 main {
+  padding-top: 40px;
   /* zajisti, aby navigace nepřekrývala obsah. Navigace je vysoká 40px*/
 }
 
 .travel {
+  position: sticky;
+  top: calc(40px + 10px);
+  z-index: 2;
   /* tento div při scrollování neodjede s obsahem, ale přilepí 10px pod navigací (50px od vrchu obsahu) */
 }
 
 .picture {
+  position: relative;
   /* je potřeba zajistit, abychom mohli přesunout popisek obrázku do pravého horního rohu obrázku */
 }
 
 .picture-description {
+  position: absolute;
+  top: 10px;
+  left: 10px;
   /* popisek obrázku se nachází přímo na obrázku, 10px shora a 10px zprava */
 }
 
 .mountains,
 .sea {
+  position: relative;
+  left: 450px;
+  z-index: 1;
   /* obrázky hor a moře jsou zleva odsunuty o 450px */
 }
 
 .chat {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 1;
   /* malého chatbota na stránce vidíme pořád. Visí vpravo dole, 10px od okrajů */
 }
